Fixed layout bug in sort order indicator

--- a/packages/perspective-viewer/src/less/row.less
+++ b/packages/perspective-viewer/src/less/row.less
@@ -64,6 +64,7 @@
 :host #sort_order {
     display: none;
     font-family: var(--button--font-family, inherit);
+    margin-right: 4px;
     &:before {
         content: var(--row-sort-order--before, "-");
     }
